# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
locale/ru/LC_MESSAGES/: django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/: 404.html  500.html  base.html  index.html
task_manager/templates/includes/: navbar.html  navbar_guest.html  navbar_user.html
task_manager/templates/statuses/: update.html
task_manager/templates/tasks/: create.html
task_manager/templates/users/: create.html  create_user.html  form_user.html  index.html  login.html  users.html
task_manager/tests/: test_labels.py  test_statuses.py  test_tasks.py  test_users.py
task_manager/users/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
