[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Eugen980 <zaza980q@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
django-bootstrap5 = "^24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
