[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Eugen980 <zaza980q@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
django-bootstrap5 = "^24.2"
django-extensions = "^3.2.3"
django-filter = "^24.2"
rollbar = "^0.16.3"
coverage = "^7.5.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
